style(project-iframe): adjust min-width to prevent overflow on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -480,7 +480,7 @@ button:focus {
 
 .project-iframe {
   width: 100%;
-  min-width: 321px;
+  min-width: 300px;
   aspect-ratio: 16/9;
   border-radius: 10px;
   border: none;
